# quiet-crab

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  result
src/: lib.rs  main.rs
src/audio/: constants.rs  mel_spectrogram.rs  mod.rs  preprocessing.rs
src/inference/: mod.rs  transcribe.rs
src/model/: attention.rs  config.rs  decoder.rs  encoder.rs  feed_forward.rs  mod.rs  positional.rs  whisper.rs
src/tokenizer/: mod.rs  whisper_tokenizer.rs
